# zest

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  Taskfile.yml  bump_version.sh  codecov.yml  dev_boot.sh  docker-compose.yml  mypy.ini
backend/: .coveragerc  .env.local  .env.test  .gitignore  Dockerfile  Taskfile.yml  alembic.ini  build.py  build_shiv.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  generate_recipes.py  gunicorn.conf.py  mailtest.py  main.py  manage.py  pyproject.toml  sprofile.py  todo.md
backend/alembic/: env.py
backend/alembic/versions/: 2025-12-23-27_initial_table.py  2025-12-23-40_initial_foreign_keys.py  2026-03-22-09-50-40_initial_baseclass_migration.py  2026-03-22-09-51-20_initial_fk_migration.py
backend/app/: db.py  main.py  utils.py
backend/app/auth/: auth.py  constants.py  email.py  models.py  schemas.py  security_utils.py
backend/app/core/: config.py  constants.py  depends.py  mail.py  pagination.py
backend/app/data/: multilingual.json
backend/app/recipes/: associations.py  constants.py  gemini.py  models.py  routes.py  schemas.py  search.py
backend/config/gunicorn/: dev.py  prod.py
backend/favorites/: admin.py  api.py  models.py  serializers.py  urls.py
backend/favorites/migrations/: 0001_initial.py  0002_initial.py
backend/favorites/tests/: tests_api.py
backend/fixtures/: recipe_categories.json  units.json  units.json.bak  write_ids.py
backend/foods/: admin.py  api.py  apps.py  models.py  serializers.py  translation.py  urls.py
backend/foods/migrations/: 0001_initial.py  0002_food_gin_index_name_de_food_gin_index_name_en_and_more.py
backend/foods/tests/: test_api.py
backend/init-test/: 01-init-db.sh
backend/recipes/: admin.py  translation.py
backend/recipes/api/: filters.py  recipe.py  recipe_categories.py  urls.py
backend/recipes/fixtures/: recipe_categories.json
backend/recipes/migrations/: 0001_initial.py  0002_initial.py
backend/recipes/models/: __init__.py  category.py  ingredient.py  instruction.py  (+1 more)
backend/scripts/: crawl_wikidata_foods.py  create_new_model_entry.py  create_new_user.py  find_duplicates.py  force_unlock.py  generate_recipes.py  index_data.py  index_recipes.py  install_fixtures.py  manual_gemini.py  prestart.sh  recipe_from_json.py
backend/shared/: api.py  filters.py  language.py  pagination.py  permissions.py  serializers.py  tools_utest.py  translator.py  utils_deprecated.py
backend/shopping_lists/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/static/: email-verification-already-verified.html  email-verification-failure.html  email-verification-success.html  failure.html  password-change-failure.html  password-reset-request.html  password-reset.html
backend/tags/: admin.py  api.py  models.py  serializers.py  urls.py
backend/tests/: conftest.py  test_auth.py  test_pagination.py  test_recipe_validators.py  test_recipes.py
backend/units/: admin.py  api.py  models.py  serializers.py  translation.py  urls.py
backend/users/: admin.py  api.py  registration.py  serializers.py  tests.py  urls.py
backend/zest/: __init__.py  api.py  asgi.py  urls.py  version.py  wsgi.py
(+213 files in other folders)
