[tool.poetry]
package-mode = false
name = "zest"
version = "0.1.47"
description = ""
authors = ["David B. Adrian <dawidh.adrian@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.8"
gunicorn = "^23.0.0"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
django-modeltranslation = "^0.19.17"
djangorestframework-simplejwt = "^5.5.0"
dj-rest-auth = "^7.0.0"
django-allauth = {extras = ["socialaccount"], version = "^65.13.1"}
drf-spectacular = ">=0.26.0"
whitenoise = "^6.11.0"
coloredlogs = "^15.0.1"
toml = "^0.10.2"
pyyaml = "^6.0.3"
uritemplate = "^4.2.0"
django-auto-prefetching = "^0.2.12"
django-silk = "^5.4.3"
nplusone = "^1.0.0"
django-redis = "^6.0.0"
tqdm = "^4.67.1"
drf-serpy = "^0.5.0"
serpy = "^0.3.1"
psycopg = {extras = ["binary"], version = "^3.2.13"}

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"
mypy = "^1.19"
flake8 = "^7.3.0"
django-stubs = "^5.2.7"
coloredlogs = "^15.0.1"
shiv = "^1.0.8"
coverage = "^7.12"
virtualenv = "^20.35.4"
black = "^25.11.0"
pre-commit = "^4.5.0"
nplusone = "^1.0.0"
pandas = "^2.3.3"
faker = "^38.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
