[project]
name = "zest-backend"
version = "0.2.12"
description = "FastAPI backend for zest recipe management software"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.0.0",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.124.0,<0.125.0",
    "google-auth>=2.43.0",
    "google-genai>=1.55.0",
    "gunicorn>=23.0.0",
    "meilisearch>=0.38.0",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
ai = [
    "ollama>=0.6.1",
]
dev = [
    "alembic>=1.17.2",
    "grequests>=0.7.0",
    "pytest-cov>=7.0.0",
    "wikidata>=0.9.0",
]
