[project]
name = "zest-backend"
version = "0.2.34"
description = "FastAPI backend for zest recipe management software"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.3,<0.136.0",
    "google-auth>=2.49.2",
    "google-genai>=1.72.0",
    "gunicorn>=25.3.0",
    "meilisearch>=0.40.0",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[dependency-groups]
ai = [
    "ollama>=0.6.1",
]
dev = [
    "alembic>=1.17.2",
    "grequests>=0.7.0",
    "pytest-cov>=7.0.0",
    "wikidata>=0.9.0",
]
